--- a/MNMSolutions.Web.Presentation/MNMSolutions.Web.Presentation.csproj
+++ b/MNMSolutions.Web.Presentation/MNMSolutions.Web.Presentation.csproj
@@ -159,6 +159,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\blank.gif" />
+    <Content Include="Images\delete.gif" />
+    <Content Include="Images\edit.gif" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
