--- a/MNMSolutions.DAL/MNMSolutions.DAL.csproj
+++ b/MNMSolutions.DAL/MNMSolutions.DAL.csproj
@@ -91,6 +91,7 @@
     <Compile Include="DB\Dev\Supplier.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="DB\Models\ProductList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
