--- a/MNMSolutions.Web.Presentation/MNMSolutions.Web.Presentation.csproj
+++ b/MNMSolutions.Web.Presentation/MNMSolutions.Web.Presentation.csproj
@@ -969,6 +969,8 @@
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\SPA\app.js" />
+    <Content Include="Scripts\SPA\controllers.js" />
+    <Content Include="Scripts\SPA\Controllers\SalesController.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
