--- a/MNMSolutions.Web.Api/MNMSolutions.Web.Api.csproj
+++ b/MNMSolutions.Web.Api/MNMSolutions.Web.Api.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\Result.cs" />
     <Compile Include="Controllers\SalesOrderHeadersController.cs" />
+    <Compile Include="Controllers\SalesReportController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
