--- a/MNMSolutions.Web.Api/Web.config
+++ b/MNMSolutions.Web.Api/Web.config
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MNMSolutionsDevDBEntities" connectionString="metadata=res://*/DB.Dev.Model1.csdl|res://*/DB.Dev.Model1.ssdl|res://*/DB.Dev.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-LOMT5N5;initial catalog=MNMSolutionsDevDB;persist security info=True;user id=sa;password=n3SY+CvM*8R#JZ(D;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+      <!--<add name="MNMSolutionsDevDBEntities" connectionString="metadata=res://*/DB.Dev.Model1.csdl|res://*/DB.Dev.Model1.ssdl|res://*/DB.Dev.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-LOMT5N5;initial catalog=MNMSolutionsDevDB;persist security info=True;user id=sa;password=n3SY+CvM*8R#JZ(D;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+      <add name="MNMSolutionsDevDBEntities1" connectionString="metadata=res://*/DB.Dev.Model2.csdl|res://*/DB.Dev.Model2.ssdl|res://*/DB.Dev.Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MNL02S55606D1\MNL02S55606D1;initial catalog=MNMSolutionsDevDB;persist security info=True;user id=sa;password=sqlS3rver20!4;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+      <!--<add name="MNMSolutionsDevDBEntities" connectionString="metadata=res://*/DB.Dev.Model1.csdl|res://*/DB.Dev.Model1.ssdl|res://*/DB.Dev.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-LOMT5N5;initial catalog=MNMSolutionsDevDB;persist security info=True;user id=sa;password=n3SY+CvM*8R#JZ(D;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
