--- a/MNMSolutions.Web.Api/MNMSolutions.Web.Api.csproj
+++ b/MNMSolutions.Web.Api/MNMSolutions.Web.Api.csproj
@@ -197,7 +197,7 @@
     <Compile Include="Controllers\OrderDetailsController.cs" />
     <Compile Include="Controllers\Inventory\ProductsController.cs" />
     <Compile Include="Controllers\Result.cs" />
-    <Compile Include="Controllers\SalesOrderHeadersController.cs" />
+    <Compile Include="Controllers\SalesOrder\SalesOrderHeadersController.cs" />
     <Compile Include="Controllers\SalesReportController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -260,7 +260,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Controllers\Report\" />
-    <Folder Include="Controllers\SalesOrder\" />
     <Folder Include="Controllers\UserManagement\" />
     <Folder Include="Models\" />
   </ItemGroup>
