--- a/MNMSolutions.DAL/packages.config
+++ b/MNMSolutions.DAL/packages.config
@@ -1,2 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<package id="EntityFramework" version="6.1.3" targetFramework="net461"></package>
+<packages>
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+</packages>
