--- a/MNMSolutions.DAL/App.Config
+++ b/MNMSolutions.DAL/App.Config
@@ -4,7 +4,6 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings><add name="MNMSolutionsDevDBEntities" connectionString="metadata=res://*/DB.Dev.Model1.csdl|res://*/DB.Dev.Model1.ssdl|res://*/DB.Dev.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-LOMT5N5;initial catalog=MNMSolutionsDevDB;persist security info=True;user id=sa;password=n3SY+CvM*8R#JZ(D;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -15,4 +14,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<connectionStrings><add name="MNMSolutionsDevDBEntities" connectionString="metadata=res://*/DB.Dev.Model1.csdl|res://*/DB.Dev.Model1.ssdl|res://*/DB.Dev.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MNL02S55606D1\MNL02S55606D1;initial catalog=MNMSolutionsDevDB;persist security info=True;user id=sa;password=sqlS3rver20!4;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
