--- a/MNMSolutions.DAL/App.Config
+++ b/MNMSolutions.DAL/App.Config
@@ -14,4 +14,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="MNMSolutionsDevDBEntities" connectionString="metadata=res://*/DB.Dev.Model1.csdl|res://*/DB.Dev.Model1.ssdl|res://*/DB.Dev.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-LOMT5N5;initial catalog=MNMSolutionsDevDB;persist security info=True;user id=sa;password=n3SY+CvM*8R#JZ(D;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="MNMSolutionsDevDBEntities" connectionString="metadata=res://*/DB.Dev.Model1.csdl|res://*/DB.Dev.Model1.ssdl|res://*/DB.Dev.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MNL02S55606D1\MNL02S55606D1;initial catalog=MNMSolutionsDevDB;user id=sa;password=sqlS3rver20!4;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
