--- a/MNMSolutions.Web.Api/MNMSolutions.Web.Api.csproj
+++ b/MNMSolutions.Web.Api/MNMSolutions.Web.Api.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\Category\View_CategoryController.cs" />
+    <Compile Include="Controllers\Customer\CustomerListsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\Inventory\CategoryOnesController.cs" />
     <Compile Include="Controllers\Inventory\InventoryStocksController.cs" />
@@ -197,9 +198,6 @@
     <Compile Include="Controllers\Inventory\ProductOnesController.cs" />
     <Compile Include="Controllers\Inventory\SalesOrderDetailsController.cs" />
     <Compile Include="Controllers\Inventory\spOrderHeaderController.cs" />
-    <Compile Include="Controllers\Inventory\ProductsController.cs" />
-    <Compile Include="Controllers\Product\ProductController.cs" />
-    <Compile Include="Controllers\Product\ProductOnesController.cs" />
     <Compile Include="Controllers\Result.cs" />
     <Compile Include="Controllers\SalesOrder\SalesOrderHeadersController.cs" />
     <Compile Include="Controllers\SalesReportController.cs" />
