view inventory controller

--- a/MNMSolutions.Web.Api/MNMSolutions.Web.Api.csproj
+++ b/MNMSolutions.Web.Api/MNMSolutions.Web.Api.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Controllers\Inventory\ProductOnesController.cs" />
     <Compile Include="Controllers\Inventory\SalesOrderDetailsController.cs" />
     <Compile Include="Controllers\Inventory\spOrderHeaderController.cs" />
+    <Compile Include="Controllers\Inventory\View_InventoryController.cs" />
     <Compile Include="Controllers\Product\ProductOnesController.cs" />
     <Compile Include="Controllers\Result.cs" />
     <Compile Include="Controllers\SalesOrder\SalesOrderHeadersController.cs" />
