--- a/MNMSolutions.Web.Api/MNMSolutions.Web.Api.csproj
+++ b/MNMSolutions.Web.Api/MNMSolutions.Web.Api.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Controllers\Product\ProductListController.cs" />
     <Compile Include="Controllers\Product\View_ProductController.cs" />
     <Compile Include="Controllers\Result.cs" />
+    <Compile Include="Controllers\SalesOrder\SalesOrderFunctionsController.cs" />
     <Compile Include="Controllers\SalesOrder\SalesOrderHeadersController.cs" />
     <Compile Include="Controllers\SalesReportController.cs" />
     <Compile Include="Controllers\Suppliers\SuppliersController.cs" />
