--- a/MNMSolutions.Web.Api/Web.config
+++ b/MNMSolutions.Web.Api/Web.config
@@ -9,11 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <!--<connectionStrings>
-    <add name="MNMSolutionsDevDBEntities" connectionString="metadata=res://*/DB.Dev.Model1.csdl|res://*/DB.Dev.Model1.ssdl|res://*/DB.Dev.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MNL02S55606D1\MNL02S55606D1;initial catalog=MNMSolutionsDevDB;user id=sa;password=sqlS3rver20!4;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MNMSolutionsDevDBEntities" connectionString="metadata=res://*/DB.Dev.Model1.csdl|res://*/DB.Dev.Model1.ssdl|res://*/DB.Dev.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MNL02S55580D1\MNL02S55580D1;initial catalog=MNMSolutionsDevDB;user id=sa;password=sqlS3rver20!4;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>-->
   <connectionStrings>
       <!--<add name="MNMSolutionsDevDBEntities" connectionString="metadata=res://*/DB.Dev.Model1.csdl|res://*/DB.Dev.Model1.ssdl|res://*/DB.Dev.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-LOMT5N5;initial catalog=MNMSolutionsDevDB;persist security info=True;user id=sa;password=sqlS3rver20!4;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="MNMSolutionsDevDBEntities" connectionString="metadata=res://*/DB.Dev.Model1.csdl|res://*/DB.Dev.Model1.ssdl|res://*/DB.Dev.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MNL02S55580D1\MNL02S55580D1;initial catalog=MNMSolutionsDevDB;persist security info=True;user id=sa;password=sqlS3rver20!4;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MNMSolutionsDevDBEntities" connectionString="metadata=res://*/DB.Dev.Model1.csdl|res://*/DB.Dev.Model1.ssdl|res://*/DB.Dev.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-LOMT5N5;initial catalog=MNMSolutionsDevDB;persist security info=True;user id=sa;password=sqlS3rver20!4;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
