polish upate function of sales order

--- a/MNMSolutions.DAL/MNMSolutions.DAL.csproj
+++ b/MNMSolutions.DAL/MNMSolutions.DAL.csproj
@@ -56,7 +56,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\Inventory\InventoryFunction.cs" />
     <Compile Include="BLL\Product\ProductList.cs" />
+    <Compile Include="BLL\Sales\Report.cs" />
     <Compile Include="BLL\Sales\OrderHeader.cs" />
     <Compile Include="DB\Dev\AspNetRole.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -173,6 +175,15 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="DB\Dev\vsp_Product_ViewByProductId_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DB\Dev\vsp_SOH_NotFulfilled_OrderBy_SOID_Desc_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DB\Dev\vsp_SOH_NotSettled_DueDate_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DB\Dev\vsp_SOH_Settled_DueDate_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ProductList.cs" />
